fix(installer): bring install.ps1 to parity with install.sh on Windows
The Windows installer had drifted far behind install.sh. Most seriously, both
generated launchers ran `java -jar`, which ignores the classpath entirely, so
every extension jar in lib/ was invisible to the JVM and the cross-index JOIN
engine was silently absent on Windows -- the same silent-wrong-results failure
class as #157. install.sh:1028 carries an explicit comment forbidding -jar.

Launchers (.bat and .ps1) now mirror install.sh's invocation:
  -cp "<jar>;<base>\lib\*" app.softnetwork.elastic.client.Cli
plus --add-opens=java.base/java.nio=ALL-UNNAMED and
-Dio.netty.tryReflectionSetAccessible=true on Java 9+, which Arrow/DuckDB need.

Ported from install.sh: the -all bundle path (bundle listing owns its own
version line, exact-version match, HEAD existence probe, fallback to the plain
artifact), licence-bundle extraction (licenses/ + NOTICE, failure-tolerant),
the bundle vs pure-Apache licence notice, and -NoExtensions. The Java floor for
ES 6/7/8 goes 8 -> 11: the 0.20+ CLI bundles logback 1.5.x (Java-11 bytecode)
and does not start on 8.

Also fixed, found while testing:
- Resolve-LatestVersion applied [-1] to a pipeline result that is a bare String
  when only one release version exists, returning its last CHARACTER
  ("0.20.2" -> "2") and then failing the download. Pre-existing; @()-wrapped.
- The .ps1 launcher passed a multi-flag JAVA_OPTS to the JVM as ONE argument.
  Now split on whitespace, with empty elements dropped (a leading space would
  otherwise emit an empty argv entry, which java reads as the main class).
- Every fallback lands on the plain engine, and this script has no coursier
  resolution to populate lib/, so it now says outright that JOIN and
  materialized views are absent on that path instead of leaving the user to
  rediscover #179's symptom.
- java's exit status is now propagated from the .ps1 launcher (install.sh gets
  this from `exec java`); logback's -D is quoted